# repro-async-std-583

./: Cargo.toml  README.md
src/: main.rs
