[package]
name = "repro-async-std-583"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/repro-async-std-583"
documentation = "https://docs.rs/repro-async-std-583"
description = "track a bug."
keywords = []
categories = []
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
async-std = { version = "1.1.0", features = ["unstable", "attributes"] }

[dev-dependencies]

[build-dependencies]
